--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     <div class="skill-box hover-target">
                         <h3>Capabilities</h3>
                         <ul class="skill-list">
-                            <li class="good"><strong>Can Do:</strong> UI, Gameplay, Front-end (VFX/Anim), Combat Systems, Back-end Optimization, NPC/AI.</li>
+                            <li class="good"><strong>Can Do:</strong> UI, Gameplay, Front-end (VFX/Anim), Combat Systems, Back-end, Optimization, NPC/AI.</li>
                             <li class="meh"><strong>Decent At:</strong> Advanced Movement (Complex sliding, wallruns).</li>
                             <li class="bad"><strong>Cannot Do:</strong> Vehicles, Guns, Advanced Physics & CFrames.</li>
                         </ul>
